force-app/main/default/objects/Proposal_Status_Persona_Matrix__mdt/Proposal_Status_Persona_Matrix__mdt.object-meta.xml
<CustomObject>
    <description>This custom metatda is used to identify the right persona (Research office/LeadChief Investigator) who should be notified of change in &quot;status&quot; field value for project proposal.</description>
    <label>Proposal Status Persona Matrix</label>
    <pluralLabel>Proposal Status Persona Matrices</pluralLabel>
</CustomObject>