force-app/main/default/objects/Proposal_Status_Persona_Matrix__mdt/fields/Persona__c.field-meta.xml
<CustomField>
    <fullName>Persona__c</fullName>
    <label>Persona</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Research Office</fullName>
                <default>true</default>
                <label>Research Office</label>
            </value>
            <value>
                <fullName>Lead Chief Investigator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>