force-app/main/default/objects/Proposal_Status_Persona_Matrix__mdt/fields/Record_Type_Name_del__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Name_del__c</fullName>
    <label>Record Type Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>