force-app/main/default/objects/Proposal_Status_Persona_Matrix__mdt/fields/Status_del__c.field-meta.xml
<CustomField>
    <fullName>Status_del__c</fullName>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>